fix cc icon alignment

--- a/app/scss/_pubinfo.scss
+++ b/app/scss/_pubinfo.scss
@@ -1,7 +1,8 @@
 // ##### Publication Information Component ##### //
 
 .c-pubinfo {
-  @extend %u-clearfix;
+  display: flex;
+  justify-content: space-between;
   margin-bottom: $spacing-md;
 
   > *:not(.c-pubinfo__license) {
@@ -9,9 +10,6 @@
   }
 
   @include bp(screen1) {
-    display: grid;
-    grid-gap: $spacing-sm $spacing-md;
-
     > *:not(.c-pubinfo__license) {
       margin-bottom: $spacing-sm;
 
@@ -25,8 +23,14 @@
 
 }
 
+.pub-links-container {
+  display: grid;
+  grid-gap: $spacing-sm $spacing-md;
+}
+
 .c-pubinfo__location-heading {
   margin-top: 0;
+  margin-bottom: 0;
   font-size: 1em;
 }
 
@@ -41,26 +45,9 @@
 
 }
 
-.c-pubinfo__statement {
-
-  @include bp(screen1) {
-    grid-column: 1;
-  }
-
-}
-
 .c-pubinfo__license {
-  display: inline-block;
-  margin-left: $spacing-md;
-  float: right;
-
   @supports (display: grid) {
     margin-left: 0;
-  }
-
-  @include bp(screen1) {
-    grid-column: 2;
-    grid-row: 1 / 4;
   }
 
   img {
